--- a/html/main.html
+++ b/html/main.html
@@ -1,9 +1,12 @@
+<!Doctype html>
 <html>
-<css>
-
-</css>
+<head>
+    <title>
+        교원대부고 설문 조사
+    </title>
+    <meta charset="utf-8"/>
+</head>
 <body>
-    <div class="title"></div>
-    <div class="total"></div>
+
 </body>
 </html>
