--- a/index.html
+++ b/index.html
@@ -5,18 +5,14 @@
     <main charset = "utf-8"/>
     <script lang="javascript" src="javascript/main.js"></script>
     <script>
-        function Check(){
-            var A = document.getElementsByTagName("label");
-            A[0].style.color="red";
-        }
     </script>
 </head>
 <body>
     <form action = "form.php" accept = "utf-8" method = "POST">
         <fieldset>
             <legend>인적 사항</legend>
-            <label>이름 : </label>
-            <input type = "text" name = "Name"/><br/>
+            <label>이름</label>
+            <input type="text" name="Name" value=""/><br/>
             <label>혈액형 : </label>
             <input type="radio" name="Bloodtype" value="A"/> A
             <input type="radio" name="Bloodtype" value="B"/> B
@@ -28,9 +24,7 @@
             <input type="radio" name="Gender" value="M"/> 남성
             <input type="radio" name="Gender" value="F"/> 여성
         </fieldset>
-
         <input type = "submit"/>
     </form>
-    <input type="button" onclick="javascript: Check('4','hello');" value = "Check()"/>
 </body>
 </html>
